 - Added ufl_cell as a method to Mesh in Python interface
 - Fix memory leak in Zoltan interface
 - Remove some 'new' for arrays in favour of std::vector
 - Added cell as an optional argument to Constant
 - Prevent the use of non contiguous NumPy arrays for most typemaps
 - Point can now be used to evaluate a Function or Expression in Python
 - Fixed dimension check for Function and Expression eval in Python
 - Fix compressed VTK output for tensors in 2D
0.9.11 [2011-05-16]
 - Change license from LGPL v2.1 to LGPL v3 or later
 - Moved meshconverter to dolfin_utils
 - Add support for conversion of material markers for Gmsh meshes
 - Add support for point sources (class PointSource)
 - Rename logging --> set_log_active
 - Add parameter "clear_on_write" to TimeSeries
 - Add support for input/output of nested parameter sets
 - Check for dimensions in linear solvers
 - Add support for automated error control for variational problems
 - Add support for refinement of MeshFunctions after mesh refinement
 - Change order of test and trial spaces in Form constructors
 - Make SWIG version >= 2.0 a requirement
 - Recognize subdomain data in Assembler from both Form and Mesh
 - Add storage for subdomains (cell_domains etc) in Form class
 - Rename MeshData "boundary facet cells" --> "boundary_facet_cells"
 - Rename MeshData "boundary facet numbers" --> "boundary_facet_numbers"
 - Rename MeshData "boundary indicators" --> "boundary_indicators"
 - Rename MeshData "exterior facet domains" --> "exterior_facet_domains"
 - Updates for UFC 2.0.1
 - Add FiniteElement::evaluate_basis_derivatives_all
 - Add support for VTK output of facet-based MeshFunctions
 - Change default log level from PROGRESS to INFO
 - Add copy functions to FiniteElement and DofMap
 - Simplify DofMap
 - Interpolate vector values when reading from time series
0.9.10 [2011-02-23]
 - Updates for UFC 2.0.0
 - Handle TimeSeries stored backward in time (automatic reversal)